# nanobind_ex

./: .gitmodules  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  pyproject.toml  setup.py  test_fec.py
app/: CMakeLists.txt  nanobind_ex_app.cpp
include/nanobind_ex/: nanobind_ex.hpp
python/nanobind_ex/: __init__.py  _nanobind_ex.cpp
src/: CMakeLists.txt  nanobind_ex.cpp
tests/: CMakeLists.txt  nanobind_ex_t.cpp
tests/python/: test_python_bindings.py
